@@ -1,6 +1,7 @@
 1.8 2007-mm-dd
   - Preserve order of attribute values.
   - new command line argument -y (thanks to David Bartley)
+  - new configuration option `unpaged-help'
 
 1.7 2007-05-05
   - Fixed buffer overrun in home_filename(), thanks to Thomas Friebel.
